<resources>
    <string name="app_name">LoginWithFacebookDemoTv</string>

    <string name="facebook_app_id">457731368292477</string>
    <string name="fb_login_protocol_scheme">fb457731368292477</string>

    <string name="content_description">image</string>
    <string name="next_visit">Next, visit</string>
    <string name="on_your_smart_phone_or_computer">on your smartphone or computer</string>
    <string name="and_enter_this_code">and enter this code:</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="facebook_com_device">facebook.com/device</string>
    <string name="code_expire_in">Code Expire In :</string>
    <string name="success">Success!</string>
    <string name="you_are_now_logged_in">You are now logged in.</string>
    <string name="str_continue">Continue</string>

</resources>
